# mmn-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: data_entries.rs  data_entry.rs  lib.rs  long_data_entries.rs  long_data_entry.rs  main.rs  path.rs  raw_data_entries.rs  raw_data_entry.rs  result.rs  short_data_entries.rs  short_data_entry.rs
