[package]
name = "mmn"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

repository = "https://github.com/chritchens/mmt"
homepage = "https://github.com/chritchens/mmt"
license = "MIT/Apache-2.0"

build = "build.rs"

[lib]
name = "mmn_lib"
path = "src/lib.rs"

[build-dependencies]
curl = "0.4"
zip = "0.5"
tempfile = "3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tensorflow = "0.13"
