[package]
name = "mmn"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

repository = "https://github.com/chritchens/mmt"
homepage = "https://github.com/chritchens/mmt"
license = "MIT/Apache-2.0"

build = "build.rs"

[lib]
name = "mmn_lib"
path = "src/lib.rs"

[[bin]]

name = "mmn"
path = "src/bin/mmn.rs"

[build-dependencies]
curl = "0.4"
zip = "0.5"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6"
rkv = "0.9"
fasttext = "0.4"
tensorflow = "0.13"
